tests/machine/x/cobol/fun_three_args.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/fun_three_args.cob:8: error: syntax error, unexpected USING
/workspace/mochi/tests/machine/x/cobol/fun_three_args.cob: in paragraph 'SUM3':
/workspace/mochi/tests/machine/x/cobol/fun_three_args.cob:13: error: syntax error, unexpected PROCEDURE
/workspace/mochi/tests/machine/x/cobol/fun_three_args.cob:14: error: 'A' is not defined
/workspace/mochi/tests/machine/x/cobol/fun_three_args.cob:14: error: 'B' is not defined
/workspace/mochi/tests/machine/x/cobol/fun_three_args.cob:14: error: 'C' cannot be used here

